Version 2.7
--------------
NEU:    Automatisches Clonen des Modules (nur Verzeichnisname anpassen)
NEU:    Upload von Dateien in den jeweiligen Modulordner
NEU:    Anlegen einer Seite vom Block aus
NEU:    eigene CSS-Datei je Modul
NEU:    Ausblenden von Bloecken in der submit.php einstellbar
BUGFIX: Fehler im Block bei Kategorieart
BUGFIX: englische Sprachdateien (muki)

Version 2.6
--------------
NEU:    Dateien includieren (verschiedene Dateiformate wie html, php, pdf etc.)
NEU:    Prüfung auf vorhandene nicht freigegeben Änderungen beim User
NEU:    nicht zugelassene Elemente beim Seitenerstellen werden ausgeblendet
NEU:    Editor Höhe und Breite einstellbar
NEU:    Einbindung von Dateien erweitert (derzeit 38 versch. Endungen)
NEU:    Recht zum Loeschen von Content hinzugefügt
NEU:    Datenbankstruktur aufgeraeumt
BUGFIX: fix FatalError in function.php unter PHP 5.4.x
BUGFIX: Fehler im Frontend beim Bearbeiten von nicht erlaubten Elementen 
BUGFIX: Fehler im Adminbereich bei der Seitenübersicht
BUGFIX: Vorauswahl HTML-Editor bei erlaubt ja/nein korrigiert
BUGFIX: Loeschen im Frontendbereich gefixt
BUGFIX: SEO-URL optimiert und angepasst

Version 2.5
--------------
Neu:	  Adminbereich im neuen XOOPS-Stil
Neu:    Klassen angelegt bzw. bereinigt
Neu:    HTML ein-/ausschaltbar per Gruppe
Neu:	  Cache implementiert (mySQl-Abfragen stark reduziert)
Neu:    Trennzeichenauswahl für Unterverzeichnisse einstellbar
Neu:    Tags zu Seiten hinzufügen (benötigt das Modul Tag von XOOPS)
Bugfix: Dateien angepasst und aufgeräumt
Bugfix: Anzeige von bel. vielen Unterverzeichnissen im Hauptmenü
Bugfix: Fehler im Adminbereich nach dem Clonen
Bugfix: mehrfach deklarierte Konstanten
Bugfix: doppelt deklarierte Klassen nach dem Klonen

Version 2.4
--------------
BUGFIX: Lokale Dateien einbinden, nur noch PDF (alfred) - erledigt.
BUGFIX: Unable to install Version 15 (alfred) - erledigt.
BUGFIX: Editor in den Einstellungen auswählen (alfred) - erledigt.